--- a/src/modal.html
+++ b/src/modal.html
@@ -1,14 +1,16 @@
 
 <div>
     <sly-field title="Download items"
-               description="Download project with items(images or videos or pointclouds) or not">
+               description="Download project with items(images or videos or pointclouds) or only annotations">
         <div class="fflex" style="flex-direction: column; align-items: flex-start">
             <el-radio class="radio"
-                      v-model="state.items">
+                      v-model="state.items"
+                      label="">Download items and annotations
             </el-radio>
             <el-radio class="radio mt5"
                       v-model="state.no_items"
-                      style="margin-left: 0;">
+                      label=""
+                      style="margin-left: 0;">Download only annotations
             </el-radio>
         </div>
     </sly-field>
