--- a/src/modal.html
+++ b/src/modal.html
@@ -5,11 +5,11 @@
         <div class="fflex" style="flex-direction: column; align-items: flex-start">
             <el-radio class="radio"
                       v-model="state.items"
-                      label="">Download items and annotations
+                      label="True">Download items and annotations
             </el-radio>
             <el-radio class="radio mt5"
                       v-model="state.no_items"
-                      label=""
+                      label="False"
                       style="margin-left: 0;">Download only annotations
             </el-radio>
         </div>
