--- a/src/modal.html
+++ b/src/modal.html
@@ -7,8 +7,8 @@
                       v-model="state.items"
                       label="True">Download items and annotations
             </el-radio>
-            <el-radio class="radio mt5"
-                      v-model="state.no_items"
+            <el-radio class="radio"
+                      v-model="state.items"
                       label="False"
                       style="margin-left: 0;">Download only annotations
             </el-radio>
