--- a/src/modal.html
+++ b/src/modal.html
@@ -3,10 +3,15 @@
     <sly-field title="Download items"
                description="Download project with items(images or videos or pointclouds) or only annotations">
         <div class="fflex" style="flex-direction: column; align-items: flex-start">
-            <el-radio-group v-model="state.items">
-              <el-radio :label="True">Download items and annotations</el-radio>
-              <el-radio :label="False">Download only annotations</el-radio>
-            </el-radio-group>
+            <el-radio class="radio"
+                      v-model="state.items"
+                      label="True">Download items and annotations
+            </el-radio>
+            <el-radio class="radio"
+                      v-model="state.items"
+                      label="False"
+                      style="margin-left: 0;">Download only annotations
+            </el-radio>
         </div>
     </sly-field>
 </div>
